2022-08-28  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:
	* apps/clock_sensor/standalone_sensor.py:

	  - Fixed off-by-one interval calculation error.


2022-08-26  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/clock_sensor_esp32.py:

	  - Tidy up: removed conditional module loading.
	
	* apps/clock_sensor/clock_sensor_esp32.py:
	* apps/clock_sensor/standalone_sensor_esp32.py:
	* conf/clock_sensor_esp32.conf:
	* conf/clock_sensor_esp8266.conf:
	* conf/standalone_sensor_esp8266.conf:

	  - Removed redundant *_ENABLED configuration parameters.

	  - Added TICK_PERIOD (msecs per tick) configuration parameter.


2022-08-25  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/webclient.py:
	* lib/webserver.py:

	  - Reduced blocksize to reduce memory requirement.


2022-08-23  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/webclient.py:

	  - Added rudimentary GET only HTTP 1.0 client.

	  - Now uses poll() to detect connection status.


2022-08-20  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/webserver.py:

	  - Client doesn't need separate input and output buffers.

	  - Replaced select() with poll() for some Micropython ports that
	    don't have it.


2022-08-16  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/webserver.py:

	  - Added Content-Length header in server response.

	* apps/clock_sensor/clock_sensor_esp32.py:
	* apps/clock_sensor/standalone_sensor_esp32.py:

	  - Added CR+LF after HTTP body content.


2022-08-05  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* lib/sensors/mpu6050.py:
	* tests/mpu6050_test.py:

	  - Added very basic MPU6050 driver and test code.


2022-07-31  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/standalone_sensor_esp32.py:

	  - Set sensor repeatability/oversampling to "high".


2022-07-29  Vino Fernando Crescini  <vfcrescini@gmail.com>

	* apps/clock_sensor/standalone_sensor_esp32.py: