@@ -9,6 +9,7 @@ DISPLAY_I2C_ADDR = 0x27
 DISPLAY_FLAG_4LINES = True
 SENSOR_I2C_ADDR = 0x77
 LED_FLAG_INVERT = True
+INTERVAL_DSPLY = 1
 INTERVAL_PROBE = 5
 INTERVAL_TSYNC = 300
 NTP_HOST = 192.168.12.1
