@@ -5,6 +5,13 @@
 
 	  - Fixed off-by-one interval calculation error.
 
+	* apps/clock_sensor/clock_sensor_esp32.py:
+	* conf/clock_sensor_esp32.conf:
+	* conf/clock_sensor_esp8266.conf:
+
+	  - Added INTERVAL_DSPLY configuration parameter to control
+	    display refesh interval.
+
 
 2022-08-26  Vino Fernando Crescini  <vfcrescini@gmail.com>
 
